# VMx

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  Package.swift  README.md  SECURITY.md  compatibility-matrix.md  mkdocs.yml  release-please-config.json
examples/python/: README.md  pyproject.toml
examples/python/console/hello_vmx/: __init__.py  __main__.py
examples/python/hello_vmx/: __main__.py
examples/python/textual/inspector/: README.md  pyproject.toml
examples/python/textual/inspector/tests/: test_smoke.py
examples/python/textual/notes_showcase/: README.md  pyproject.toml
examples/python/textual/notes_showcase/tests/: test_edge_cases.py
examples/python/tk/todo_app/: __init__.py  __main__.py
examples/python/tk_todo_app/: __init__.py  __main__.py
examples/python/vmx_inspector/: README.md  pyproject.toml
examples/python/vmx_inspector/src/vmx_inspector/: __main__.py  app.py  details_view.py  message_log.py  sample_tree.py  tree_view.py
examples/rust/tui/notes-showcase/: Cargo.toml
examples/rust/tui/notes-showcase/src/: app.rs  lib.rs  main.rs  models.rs  viewmodels.rs  views.rs
examples/rust/tui/notes-showcase/tests/: viewmodels.rs
langs/python/: CHANGELOG.md  README.md  RELEASING.md  pyproject.toml  tox.ini
langs/python/scripts/: smoke_test.py
langs/python/src/vmx/: __about__.py  __init__.py  _asyncio_runner.py
langs/python/src/vmx/aggregates/: __init__.py  aggregate_vm.py  builders.py
langs/python/src/vmx/builders/: __init__.py  _validation.py  exceptions.py
langs/python/src/vmx/capabilities/: __init__.py  crud.py  current_crud.py  dialog.py  expandable_state.py  expansion.py  filter.py  lifecycle_capabilities.py  management.py  pageable.py  search.py  searchable_state.py  selection.py
langs/python/src/vmx/collections/: __init__.py  aggregate_change_stream.py  batch.py  collection_changed.py  keyed_serviced_observable_collection.py  observable_dictionary.py  observable_list.py  observable_membership.py  paged_composition.py  protocols.py  serviced_observable_collection.py  token_paged_composition.py
langs/python/src/vmx/commands/: __init__.py  async_relay_command.py  composite_command.py  confirmation_decorator_command.py  decorator_command.py  fluent.py  modeled_crud_commands.py  protocols.py  relay_command.py
langs/python/src/vmx/components/: __init__.py  base.py  builders.py  component_vm.py  protocols.py  readonly_component_vm.py
langs/python/src/vmx/composites/: __init__.py  builders.py  composite_vm.py  filtered_composite_vm.py  protocols.py  scored_filtered_composite_vm.py
langs/python/src/vmx/dialogs/: __init__.py  dialog_service.py  modal_vm.py  null_dialog_service.py
langs/python/src/vmx/forms/: __init__.py  builders.py  form_vm.py
langs/python/src/vmx/forwarding/: __init__.py  component.py  composite.py
langs/python/src/vmx/groups/: __init__.py  builders.py  group_vm.py
langs/python/src/vmx/hierarchical/: __init__.py  builders.py  hierarchical_vm.py
langs/python/src/vmx/lifecycle/: __init__.py  exceptions.py  status.py  transition_validator.py
langs/python/src/vmx/localization/: __init__.py  localizer.py  null_localizer.py
langs/python/tests/: conftest.py
langs/python/tests/conformance/: README.md  test_aggregate_change_stream.py  test_aggregate_vm.py  test_async_resource_vm.py  test_builders.py  test_cap_021_filterable.py  test_cap_022_pageable.py  test_capabilities.py  test_cmd_008_to_011_fluent_commands.py  test_col_001_to_004_serviced.py  test_col_005_to_009_observable_list.py  test_col_010_to_015_observable_dictionary.py  test_col_016_to_021_paged_composition.py  test_col_024_to_031_token_paged_composition.py  test_col_040_to_047_observable_list_replace_all.py  test_col_048_to_055_serviced_parity.py  test_col_056_to_064_keyed_serviced.py  test_command_decorators.py  test_commands.py  test_comp_028_to_037_filtered_composite.py  test_component_vm.py  test_composite_vm.py  test_derived_properties.py  test_dia_001_to_008_dialog_service.py  test_dia_009_to_013_modal_presentation.py  test_disc_001_to_006_discriminator_vm.py  test_disp_014_post_dispose_modeled_assignment.py  test_disposal_invariant.py  test_expand_collapse.py  test_form_001_to_010_form_vm.py  test_form_016_to_023_validation.py  test_form_024_to_029_reset_on_approved.py  test_form_030_set_model_hub_publication.py  test_forwarding.py  test_group_vm.py  test_hier_001_to_014_hierarchical_vm.py  test_hier_015_to_017_hierarchical_vm_builder.py  test_hier_018_reparent_guard.py  test_hier_019_to_022_invalidation.py  test_hier_023_to_030_batch_attach.py  (+14 more)
langs/python/tests/unit/: test_options_factory.py  test_smoke.py  test_vmx_hygiene_cleanup.py
langs/rust/: CHANGELOG.md  Cargo.toml  README.md  RELEASING.md
langs/rust/src/: aggregate_change_stream.rs  aggregates.rs  async_resource_vm.rs  async_value.rs  capabilities.rs  collections.rs  commands.rs  components.rs  composites.rs  derived_property.rs  dialogs.rs  discriminator.rs  forms.rs  forwarding.rs  groups.rs  hierarchical.rs  lib.rs  modeled_crud.rs  notifications.rs  paged_composition.rs  runtime.rs  searchable_state.rs  specialized_vms.rs  token_paging.rs
langs/rust/src/fixtures/: message-ordering.json
langs/rust/tests/: conformance.rs
langs/rust/tests/conformance/: aggregate_change_stream.rs  aggregate_vm.rs  async_resource_vm.rs  builders.rs  capabilities.rs  catalog_markers.rs  collections.rs  command_decorators.rs  commands.rs  component_vm.rs  composite_vm.rs  derived_properties.rs  dialogs.rs  discriminator.rs  expandable.rs  filtered_composite.rs  form_model_hub_publication.rs  forms.rs  forwarding.rs  group_vm.rs  hierarchical.rs  hierarchical_batch.rs  lifecycle.rs  localization.rs  message_hub.rs  modeled_crud.rs  notifications.rs  null_services.rs  observable_list_replace_all.rs  owned_resources.rs  post_dispose_modeled_assignment.rs  property_change.rs  search_filter.rs  subscribe_value.rs  threading.rs  tree_utils.rs  vm_collection_move.rs
(+1592 files in other folders)
