[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vmx-python-examples"
version = "0.1.0"
description = "VMx Python examples — hello_vmx console demo, todo_app tkinter MVVM demo, and vmx_inspector Textual TUI."
requires-python = ">=3.10"
dependencies = [
    "vmx>=2.4.0",
]

[tool.uv.sources]
vmx = { path = "../../langs/python", editable = true }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["console/hello_vmx", "tk/todo_app"]
