[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vmx-python-examples"
version = "0.1.0"
description = "VMx Python examples — hello_vmx console demo and todo_app tkinter MVVM demo."
requires-python = ">=3.10"
dependencies = [
    "vmx>=3.1.0",
]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "ruff>=0.4",
]

[tool.uv.sources]
vmx = { path = "../../langs/python", editable = true }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["console/hello_vmx", "tk/todo_app"]
