[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "vmx"
description = "Hierarchical, lifecycle-aware MVVM viewmodel framework."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Kaveh Razavi", email = "kaveh.razavi@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
  "reactivex>=4.0.4",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/kavehr/VMx"
Documentation = "https://kavehr.github.io/VMx/"
Issues = "https://github.com/kavehr/VMx/issues"
Changelog = "https://github.com/kavehr/VMx/blob/main/langs/python/CHANGELOG.md"

[project.optional-dependencies]
test = ["pytest>=7", "pytest-asyncio>=0.23", "pytest-cov>=4"]
typing = ["mypy>=1.8"]
lint = ["ruff>=0.4"]
dev = ["pytest>=7", "pytest-asyncio>=0.23", "pytest-cov>=4", "mypy>=1.8", "ruff>=0.4"]

[tool.hatch.version]
path = "src/vmx/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/vmx"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "RUF"]

[tool.mypy]
strict = true
python_version = "3.10"
files = ["src/vmx"]
disable_error_code = ["empty-body"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "conformance: cross-language conformance test (Phase 1 catalog ID)",
]

[tool.coverage.run]
branch = true
source = ["vmx"]

[tool.coverage.report]
show_missing = true
fail_under = 0
