[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "vmx"
description = "Hierarchical, lifecycle-aware MVVM viewmodel framework."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Kaveh Razavi", email = "kaveh.razavi@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
  "reactivex>=4.0.4",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/thekaveh/VMx"
Documentation = "https://thekaveh.github.io/VMx/"
Issues = "https://github.com/thekaveh/VMx/issues"
Changelog = "https://github.com/thekaveh/VMx/blob/main/langs/python/CHANGELOG.md"

[project.optional-dependencies]
test = ["pytest>=7", "pytest-asyncio>=0.23", "pytest-cov>=4"]
typing = ["mypy>=1.8"]
lint = ["ruff>=0.4"]
dev = ["vmx[test,typing,lint]"]

[tool.hatch.version]
path = "src/vmx/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/vmx"]

[tool.hatch.build.targets.wheel.force-include]
"../../spec/fixtures/lifecycle-transitions.json" = "vmx/lifecycle/_data/lifecycle-transitions.json"
"../../spec/fixtures/message-ordering.json" = "vmx/services/_data/message-ordering.json"
"../../spec/fixtures/command-truthtable.json" = "vmx/commands/_data/command-truthtable.json"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Conformance test names embed spec IDs (e.g. test_LIFE_005_…) — uppercased letters
# are intentional and normative.  N802 (function name should be lowercase) does not
# apply to these files.
"tests/conformance/*.py" = ["N802"]

[tool.mypy]
strict = true
python_version = "3.10"
files = ["src/vmx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
markers = [
  "conformance: cross-language conformance test (spec/12-conformance.md catalog ID)",
]

[tool.coverage.run]
branch = true
source = ["vmx"]

[tool.coverage.report]
show_missing = true
fail_under = 85

[dependency-groups]
dev = [
    "mypy>=1.10",
]
