[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "vmx"
description = "Hierarchical, lifecycle-aware MVVM viewmodel framework."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Kaveh Razavi", email = "kaveh.razavi@gmail.com" }]
requires-python = ">=3.10"
keywords = ["mvvm", "viewmodel", "rx", "reactive", "lifecycle", "ui-architecture"]
dependencies = [
  "reactivex>=4.0.4",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/thekaveh/VMx"
Documentation = "https://thekaveh.github.io/VMx/"
Issues = "https://github.com/thekaveh/VMx/issues"
Changelog = "https://github.com/thekaveh/VMx/blob/main/langs/python/CHANGELOG.md"

[project.optional-dependencies]
test = ["pytest>=7", "pytest-asyncio>=0.23", "pytest-cov>=4"]
typing = ["mypy>=1.8"]
lint = ["ruff>=0.4"]
dev = ["vmx[test,typing,lint]"]

[tool.hatch.version]
path = "src/vmx/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/vmx"]

[tool.hatch.build.targets.wheel.force-include]
# Only lifecycle-transitions.json is loaded at runtime. Keep the source path
# inside this package so wheels can be built either from the repository checkout
# or from the published sdist.
"src/vmx/lifecycle/_data/lifecycle-transitions.json" = "vmx/lifecycle/_data/lifecycle-transitions.json"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Conformance test names embed spec IDs (e.g. test_LIFE_005_…) — uppercased letters
# are intentional and normative.  N802 (function name should be lowercase) does not
# apply to these files. The `**/` prefix lets the pattern match whether ruff is
# invoked from langs/python/ (e.g. local `cd langs/python && ruff check .`) or
# from the repo root with `--config langs/python/pyproject.toml` (as the
# pre-commit hook does — see .pre-commit-config.yaml).
"**/tests/conformance/*.py" = ["N802"]

[tool.ruff.lint.isort]
# Pin vmx as first-party so import ordering stays consistent whether ruff is
# invoked from langs/python/ (where `src = ["src", "tests"]` makes vmx
# discoverable as first-party automatically) or from the repo root with
# `--config langs/python/pyproject.toml` (where the relative `src` paths
# would otherwise cause vmx to be misclassified as third-party).
known-first-party = ["vmx"]

[tool.mypy]
strict = true
python_version = "3.10"
files = ["src/vmx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
markers = [
  "conformance: cross-language conformance test (spec/12-conformance.md catalog ID)",
]

[tool.coverage.run]
branch = true
source = ["vmx"]

[tool.coverage.report]
show_missing = true
fail_under = 85
