[package]
name = "vmx-rs"
version = "0.22.0"
edition = "2021"
rust-version = "1.88"
description = "Hierarchical, lifecycle-aware MVVM viewmodel framework."
license = "Apache-2.0"
authors = ["Kaveh Razavi <kaveh.razavi@gmail.com>"]
homepage = "https://github.com/thekaveh/VMx"
repository = "https://github.com/thekaveh/VMx"
documentation = "https://docs.rs/vmx-rs"
readme = "README.md"
keywords = ["mvvm", "viewmodel", "reactive", "lifecycle"]
categories = ["gui", "asynchronous"]
publish = ["crates-io"]
include = ["src/**", "tests/**", "README.md", "CHANGELOG.md"]

[lib]
name = "vmx"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"

[dev-dependencies]
pretty_assertions = "1.4.1"
serde_json = "1.0.145"
