[project]
name = "vmx-inspector"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "vmx",
  "textual>=0.65",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "anyio[trio]",
]

[tool.uv.sources]
vmx = { path = "../../../langs/python", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vmx_inspector"]

[project.scripts]
vmx-inspector = "vmx_inspector.__main__:main"
