[project]
name = "notes-showcase"
version = "0.1.0"
description = "VMx Notes Workspace showcase (Textual TUI)"
requires-python = ">=3.10"
dependencies = [
    "vmx>=2.2.0",
    "textual>=0.80",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
vmx = { path = "../../../../langs/python", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/notes_showcase"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=notes_showcase.models --cov=notes_showcase.viewmodels --cov=notes_showcase.views --cov-report=term-missing --cov-fail-under=85"
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.10"
files = ["src/notes_showcase"]
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["reactivex.*"]
ignore_missing_imports = true
