[project]
name = "notes-showcase"
version = "0.1.0"
description = "VMx Notes Workspace showcase (Textual TUI)"
requires-python = ">=3.10"
dependencies = [
    "vmx>=3.1.0",
    "textual>=0.80",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
vmx = { path = "../../../../langs/python", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/notes_showcase"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "mypy>=1.10",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Coverage is split into two scopes according to runtime responsibility:
#   * `models` + `viewmodels` carry the spec-relevant logic and must
#     stay at ≥90 % per VM (the floor `--cov-fail-under=90` enforces
#     the union; per-VM is enforced by the maintenance checklist).
#   * `views` rely on a live Textual app to exercise modals / dispatchers
#     and intentionally sit at a lower floor — they would skew the
#     viewmodel ratio otherwise. See examples/notes-showcase-parity.md.
addopts = "--cov=notes_showcase.models --cov=notes_showcase.viewmodels --cov-report=term-missing --cov-fail-under=90 --cov=notes_showcase.views --cov-config=pyproject.toml"
testpaths = ["tests"]
markers = [
    "conformance: cross-language conformance test (spec/12-conformance.md catalog ID)",
]

[tool.coverage.report]
# Exclude view modules that require a live Textual runtime to
# exercise (modals, dispatcher bridge). They are still imported and
# smoke-tested via the headless app fixtures but the bulk of their
# lines runs inside Textual's event loop and is awkward to drive
# under pytest-cov.
exclude_also = [
    "if __name__ == .__main__.:",
]
omit = [
    "src/notes_showcase/views/modals/*.py",
    "src/notes_showcase/views/adapter/dispatcher.py",
]

[tool.mypy]
strict = true
python_version = "3.10"
files = ["src/notes_showcase"]
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["reactivex.*"]
ignore_missing_imports = true
